--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main" : "./lib/starbox.js",
   "dependencies" : {
-    "optimist" : "0.3.5"
+    "optimist" : ">=0.3"
   },
   "license" : "Apache 2.0",
   "engines" : {
