--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "StarBox",
+  "name" : "starbox-client",
   "preferGlobal" : true,
   "version" : "0.0.1",
   "author" : "Patrick Wang <kk1fff@patrickz.net>",
